[package]
name = "reqray-test-output"
version = "0.1.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
reqray = "0.2"
tokio = { version = "0.3", features = ["full"] }
tracing-futures = { version = "0.2", features = ["tokio", "futures-03", "std-future"]}
